--- a/index.html
+++ b/index.html
@@ -3,22 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your IP Address</title>
+    <title>What's My IP Address? - Learn About IPs</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
+        /* Custom CSS included from above */
         body {
             font-family: 'Inter', sans-serif;
         }
+        .main-content-container {
+            max-width: 800px;
+            padding: 32px;
+        }
+        .explanation-section {
+            text-align: left;
+            margin-top: 32px;
+            color: #333;
+            line-height: 1.6;
+        }
+        .explanation-section h2 {
+            font-size: 1.8rem;
+            font-weight: 700;
+            color: #2563eb;
+            margin-bottom: 16px;
+        }
+        .explanation-section h3 {
+            font-size: 1.4rem;
+            font-weight: 600;
+            color: #4a5568;
+            margin-top: 24px;
+            margin-bottom: 8px;
+        }
+        .explanation-section p {
+            margin-bottom: 12px;
+        }
+        .explanation-section ul {
+            list-style-type: disc;
+            margin-left: 20px;
+            margin-bottom: 12px;
+        }
+        .explanation-section li {
+            margin-bottom: 6px;
+        }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6353274172436308"
+     crossorigin="anonymous"></script>
 </head>
 <body class="bg-gradient-to-br from-blue-100 to-purple-200 flex justify-center items-center min-h-screen">
-    <div class="bg-white rounded-lg shadow-xl p-8 max-w-md w-full text-center">
-        <h1 class="text-2xl font-semibold text-blue-600 mb-4">Your IP Address</h1>
-        <div id="ip-address" class="text-xl font-mono text-gray-800 p-4 bg-gray-100 rounded-md border border-gray-300">
+    <div class="bg-white rounded-lg shadow-xl p-8 w-full text-center main-content-container">
+        <h1 class="text-3xl font-bold text-blue-600 mb-6">What's My IP Address?</h1>
+        <p class="text-lg text-gray-700 mb-4">Your public IP address is:</p>
+        <div id="ip-address" class="text-4xl font-mono text-gray-800 p-6 bg-gray-100 rounded-lg border border-gray-300 break-words">
             Loading...
         </div>
         <p class="mt-4 text-gray-500 text-sm">This is your public IP address. It can be used to identify your device on the internet.</p>
+
+        <div class="explanation-section">
+            <h2>Understanding Your IP Address</h2>
+            <p>An IP address (Internet Protocol address) is a unique numerical label assigned to every device connected to a computer network that uses the Internet Protocol for communication. Think of it like a street address for your device on the internet – it tells where data should be sent and where it comes from.</p>
+
+            <h3>What is an IP Address About?</h3>
+            <p>IP addresses are fundamental to how the internet works. They allow computers, servers, and other devices to find and communicate with each other. Without IP addresses, you wouldn't be able to access websites, send emails, or stream videos. There are two main versions in use:</p>
+            <ul>
+                <li>IPv4 (Internet Protocol version 4): This is the older and most common version, consisting of four sets of numbers separated by dots (e.g., 192.168.1.1). IPv4 addresses are 32-bit numbers, meaning there are about 4.3 billion unique addresses.</li>
+                <li>IPv6 (Internet Protocol version 6):*As IPv4 addresses began to run out due to the explosion of connected devices, IPv6 was developed. These are 128-bit addresses and are much longer (e.g., 2001:0db8:85a3:0000:0000:8a2e:0370:7334), providing a virtually unlimited supply of unique addresses.</li>
+            </ul>
+
+            <h3>Public vs. Private IP Addresses</h3>
+            <p>You have two types of IP addresses:</p>
+            <ul>
+                <li>Public IP Address: This is the address assigned to your network by your Internet Service Provider (ISP). It's the address that devices outside your local network use to communicate with your router and, by extension, your devices. This is the IP address displayed on this page.</li>
+                <li>Private IP Address: This is the address assigned to each device *within* your local network (e.g., your computer, phone, smart TV) by your router. These addresses are not visible to the outside internet and are only used for communication within your home or office network.</li>
+            </ul>
+
+            <h3>Dynamic vs. Static IP Addresses</h3>
+            <p>IP addresses can also be categorized by how they are assigned:</p>
+            <ul>
+                <li>Dynamic IP Address: Most home and small business users have dynamic IP addresses. These addresses are temporarily assigned by your ISP from a pool of available addresses. They can change periodically (e.g., when your router restarts, or every few days/weeks). This is cost-effective for ISPs.</li>
+                <li>Static IP Address:A static IP address is a permanent, unchanging address assigned to a device. Businesses often use static IPs for servers, websites, or services that need to be consistently accessible from the internet. They typically come with an additional cost from your ISP.</li>
+            </ul>
+
+            <h3>Why is an IP Address Needed?</h3>
+            <p>IP addresses are essential for several reasons:</p>
+            <ul>
+                <li>Identification & Routing:They identify a specific device or network on the internet, enabling data packets to be sent to the correct destination, much like postal addresses ensure mail reaches the right house.</li>
+                <li>Communication: They facilitate the two-way communication required for almost all internet activities, from Browse websites to online gaming and video calls.</li>
+                <li>Geolocation: They help determine the general geographical location of a device, which can be used for services like localized content delivery, language settings, or even fraud prevention.</li>
+                <li>Security: In some cases, IP addresses are used for security measures, such as blocking suspicious traffic or allowing access only from known locations.</li>
+            </ul>
+
+            <h3>How to Protect Your IP Address and Privacy</h3>
+            <p>While your public IP address is necessary for internet access, you might want to protect it for privacy or security reasons. Here are common methods:</p>
+            <ul>
+                <li>Virtual Private Network (VPN): A VPN encrypts your internet traffic and routes it through a server operated by the VPN provider. This hides your real IP address, making it appear as though you are Browse from the VPN server's location.</li>
+                <li>Proxy Server: Similar to a VPN, a proxy server acts as an intermediary between your device and the internet. Your requests go to the proxy server first, which then forwards them to the destination website, masking your real IP.</li>
+                <li>Tor Browser: Tor (The Onion Router) is a free, open-source software that enables anonymous communication. It routes your internet traffic through a worldwide volunteer overlay network, obscuring your IP address and location.</li>
+            </ul>
+
+            <h3>IP Address Lookup Tools</h3>
+            <p>This website is an example of an IP address lookup tool. These tools interact with APIs (Application Programming Interfaces) like ipify.org to quickly fetch and display your current public IP address. They are simple utilities that help users identify their network's external identifier.</p>
+        </div>
     </div>
 
     <script>
@@ -36,7 +120,5 @@
                 ipAddressElement.classList.add('text-red-500'); // Change text color to red for error
             });
     </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6353274172436308"
-     crossorigin="anonymous"></script>
-</body>
+    </body>
 </html>
