--- a/index.html
+++ b/index.html
@@ -228,5 +228,7 @@
                 ipAddressElement.classList.add('text-red-500'); // Change text color to red for error
             });
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6353274172436308"
+     crossorigin="anonymous"></script>
 </body>
 </html>
